--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"front-end-website": "file:",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.5"
+		"react-router-dom": "^7.1.5",
+		"sweetalert2": "^11.17.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
