--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"framer-motion": "^12.4.11",
 		"front-end-website": "file:",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
