--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"dayjs": "^1.11.13",
 		"framer-motion": "^12.4.11",
 		"front-end-website": "file:",
+		"lucide-react": "^0.482.0",
 		"react": "^19.0.0",
 		"react-calendar": "^5.1.0",
 		"react-dom": "^19.0.0",
