--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://backend-api-production-7aff.up.railway.app/api/
+# VITE_API_URL=http://localhost:8080/api/
 
-# VITE_API_URL=https://backend-api-production-7aff.up.railway.app/api/
+VITE_API_URL=https://backend-api-production-7aff.up.railway.app/api/
